# mothership

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  Taskfile.yml  gemini-extension.json  mothership.yaml  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.github/workflows/: version-bump.yml
docker/relay/: Caddyfile  docker-compose.yml
docs/: cli.md  cloud-agent-auth.md  cloud-worker-auth-spine.md  concepts.md  configuration.md  mship-serve-tailscale.md  relay-hosting.md  remote-run.md  unattended-cloud-runner.md
docs/adapters/: claude-routine-runner.md
docs/plans/: 2026-06-14-skills-cli-refresh.md  2026-06-16-low-friction-phone-connection.md  2026-06-18-cloud-auth.md  2026-06-19-dispatch-ergonomics.md  2026-06-19-enforcement-gate.md  2026-06-19-ui-capture.md  2026-06-22-non-relay-qr-pairing.md  2026-06-22-spawn-fresh-base.md  2026-06-22-tasks-tab.md  2026-06-23-capture-as-conversation.md  2026-06-23-message-mailbox.md  2026-06-25-relay-enroll-approval.md  2026-06-25-relay-multi-device-identity-loud.md  (+4 more)
examples/: mothership.yaml
scripts/: relay-bootstrap.sh
skills/: working-with-mothership
tests/: conftest.py  test_container.py  test_dependency_integration.py  test_docs_config_workflow.py  test_finish_config_only_gate.py  test_finish_gate.py  test_finish_integration.py  test_hook_integration.py  test_init_detect_monorepo.py  test_init_integration.py  test_integration.py  test_monorepo_integration.py  test_resilience_integration.py  test_scaling_integration.py  test_spawn_gate.py  test_test_diff_integration.py  test_version.py  test_workitem_gate.py
(+562 files in other folders)
