[project]
name = "mothership"
version = "0.2.0"
description = "Phase-based workflow engine for multi-repo AI development"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.15",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=0.80",
    "InquirerPy>=0.3",
    "dependency-injector>=4.0",
    "pyyaml>=6.0",
]

[project.scripts]
mship = "mship.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mship"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-tmp-files>=0.0.2",
    "pytest-asyncio>=0.23",
    "coverage>=7.13.5",
]
